--- a/index.html
+++ b/index.html
@@ -78,9 +78,15 @@
     Official version created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
     <!-- hitwebcounter Code START -->
+<!-- hitwebcounter Code START -->
 <a href="http://www.hitwebcounter.com/" target="_blank">
 <img src="http://hitwebcounter.com/counter/counter.php?page=5304520&style=0007&nbdigits=5&type=page&initCount=0" title="number counter" Alt="number counter"   border="0" >
-</a>
+</a><br/>
+<!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com/" title="Track Web Visitors" 
+target="_blank" style="font-family: Arial, Helvetica, sans-serif; 
+font-size: 9px; color: #6D5B77; text-decoration: underline ;"><em>Track Web Visitors</em>
+</a>   
+  
   </div>
 
   <script src="js/animframe_polyfill.js"></script>
