created by Gagik Movsisyan

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <div class="lower">
 	        <a class="keep-playing-button">I love that yellow tile</a>
-          <a class="retry-button">Try again</a>
+          <a class="retry-button">I'll study next year</a>
         </div>
       </div>
 
@@ -76,6 +76,8 @@
     <hr>
     <p>
     Official version created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    <br>
+    Finals version created by <a href="http://www.linkedin.com/pub/gagik-movsisyan/63/4b6/53b"target="_blank">Gagik Movsisyan.</a>
     </p>
     <!-- hitwebcounter Code START -->
 <!-- hitwebcounter Code START -->
