--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
     <hr>
     <p>
     Original version created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    <hr>
+<!-- hitwebcounter Code START -->
+<a href="http://www.hitwebcounter.com/" target="_blank">
+<img src="http://hitwebcounter.com/counter/counter.php?page=5304515&style=0007&nbdigits=5&type=page&initCount=0" title="number counter" Alt="number counter"   border="0" >
+</a>
+  
     </p>
   </div>
 
