--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <p>
     Original version created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     <br>
-    Finals version created by <a href="http://www.linkedin.com/pub/gagik-movsisyan/63/4b6/53b"target="_blank">Gagik Movsisyan.</a>
+    Finals version created by <a href="https://twitter.com/gagikm">Gagik </a><a href="http://www.linkedin.com/pub/gagik-movsisyan/63/4b6/53b"target="_blank">Movsisyan.</a>
     <hr>
 <!-- hitwebcounter Code START -->
 <a href="http://www.hitwebcounter.com/" target="_blank">
