--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
   <div class="container">
     <div class="heading">
       <h1 class="title">Finals 2048</h1>
+
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://gagikm.github.io/Finals2048" data-text="I'm free" data-related="gagikm">Tweet</a>
+
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -77,6 +84,7 @@
     Original version created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     <br>
     Finals version created by <a href="https://twitter.com/gagikm">Gagik </a><a href="http://www.linkedin.com/pub/gagik-movsisyan/63/4b6/53b"target="_blank">Movsisyan.</a>
+
     <hr>
 <!-- hitwebcounter Code START -->
 <a href="http://www.hitwebcounter.com/" target="_blank">
