--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     <p>
     Original version created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     <br>
-    Finals version created by <a href="https://twitter.com/gagikm">Gagik </a><a href="http://www.linkedin.com/pub/gagik-movsisyan/63/4b6/53b"target="_blank">Movsisyan.</a>
+    Finals version created by <a href="https://twitter.com/gagikm">Gagik </a><a href="http://www.linkedin.com/pub/gagik-movsisyan/63/4b6/53b"target="_blank">Movsisyan.</a> <a href="https://twitter.com/gagikm" class="twitter-follow-button" data-show-count="false">Follow @gagikm</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
     <hr>
 <!-- hitwebcounter Code START -->
