--- a/index.html
+++ b/index.html
@@ -91,7 +91,16 @@
 <a href="http://www.hitwebcounter.com/" target="_blank">
 <img src="http://hitwebcounter.com/counter/counter.php?page=5304515&style=0007&nbdigits=15&type=page&initCount=0" title="number counter" Alt="number counter"   border="0" >
 </a>
-  
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49234069-2', 'gagikm.github.io');
+  ga('send', 'pageview');
+
+</script>
     </p>
   </div>
 
