--- a/index.html
+++ b/index.html
@@ -122,5 +122,16 @@
   <script src="js/local_score_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
+  <script type="text/javascript"><!--
+google_ad_client = "ca-pub-1945780898390297";
+/* finals */
+google_ad_slot = "5884262763";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </body>
 </html>
