--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ target="_blank" style="font-family: Arial, Helvetica, sans-serif;
 font-size: 9px; color: #6D5B77; text-decoration: underline ;"><em>Track Web Visitors</em>
 </a>   
   
-    <script type="text/javascript"><!--
+    <script style="margin:0 auto;" type="text/javascript"><!--
 google_ad_client = "ca-pub-1945780898390297";
 /* finals */
 google_ad_slot = "5884262763";
