--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ target="_blank" style="font-family: Arial, Helvetica, sans-serif;
 font-size: 9px; color: #6D5B77; text-decoration: underline ;"><em>Track Web Visitors</em>
 </a>   
   
-    <script style="margin:0 auto;" type="text/javascript"><!--
+    <center><script  type="text/javascript"><!--
 google_ad_client = "ca-pub-1945780898390297";
 /* finals */
 google_ad_slot = "5884262763";
@@ -100,6 +100,7 @@ google_ad_height = 90;
 <script type="text/javascript"
 src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+</center>
   </div>
 
   <script src="js/animframe_polyfill.js"></script>
