--- a/index.html
+++ b/index.html
@@ -97,17 +97,7 @@
 
 </p>
     <hr>
-      <script type="text/javascript"><!--
-google_ad_client = "ca-pub-1945780898390297";
-/* finals */
-google_ad_slot = "5884262763";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript"
-src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+
 <!-- hitwebcounter Code START -->
 <a href="http://www.hitwebcounter.com/" target="_blank">
 <img src="http://hitwebcounter.com/counter/counter.php?page=5304515&style=0007&nbdigits=15&type=page&initCount=0" title="number counter" Alt="number counter"   border="0" >
@@ -123,6 +113,17 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 
 </script>
     </p>
+          <script type="text/javascript"><!--
+google_ad_client = "ca-pub-1945780898390297";
+/* finals */
+google_ad_slot = "5884262763";
+google_ad_width = 100%;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
   </div>
 
   <script src="js/animframe_polyfill.js"></script>
