--- a/index.html
+++ b/index.html
@@ -113,17 +113,7 @@
 
 </script>
     </p>
-          <script type="text/javascript"><!--
-google_ad_client = "ca-pub-1945780898390297";
-/* finals */
-google_ad_slot = "5884262763";
-google_ad_width = 1000;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript"
-src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+
   </div>
 
   <script src="js/animframe_polyfill.js"></script>
@@ -134,6 +124,16 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
   <script src="js/local_score_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
-
 </body>
+          <script type="text/javascript"><!--
+google_ad_client = "ca-pub-1945780898390297";
+/* finals */
+google_ad_slot = "5884262763";
+google_ad_width = 100%;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </html>
