--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 google_ad_client = "ca-pub-1945780898390297";
 /* finals */
 google_ad_slot = "5884262763";
-google_ad_width = 100%;
+google_ad_width = 1000;
 google_ad_height = 90;
 //-->
 </script>
