--- a/index.html
+++ b/index.html
@@ -124,16 +124,18 @@
   <script src="js/local_score_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
+  <span style="margin:0 auto; width:100%">
   <script type="text/javascript"><!--
 google_ad_client = "ca-pub-1945780898390297";
 /* finals */
 google_ad_slot = "5884262763";
-google_ad_width = auto;
+google_ad_width = 1000;
 google_ad_height = 90;
 //-->
 </script>
 <script type="text/javascript"
 src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+</span>
 </body>
 </html>
