--- a/index.html
+++ b/index.html
@@ -124,18 +124,7 @@
   <script src="js/local_score_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
-  <span style="margin:0 auto; width:100%">
-  <script type="text/javascript"><!--
-google_ad_client = "ca-pub-1945780898390297";
-/* finals */
-google_ad_slot = "5884262763";
-google_ad_width = 1000;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript"
-src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</span>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
+<!-- Top of site --> <ins class="adsbygoogle"      style="display:inline-block;width:1000px;height:120px"      data-ad-client="ca-pub-1945780898390297"      data-ad-slot="5709465966"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
 </body>
 </html>
