--- a/index.html
+++ b/index.html
@@ -79,18 +79,7 @@
     <br>
     Finals version created by <a href="http://www.linkedin.com/pub/gagik-movsisyan/63/4b6/53b"target="_blank">Gagik Movsisyan.</a>
     </p>
-        <center><script  type="text/javascript"><!--
-google_ad_client = "ca-pub-1945780898390297";
-/* finals */
-google_ad_slot = "5884262763";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript"
-src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</center>
+ <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <!-- Top of site --> <ins class="adsbygoogle"      style="display:inline-block;width:1000px;height:120px"      data-ad-client="ca-pub-1945780898390297"      data-ad-slot="5709465966"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
     <!-- hitwebcounter Code START -->
 <!-- hitwebcounter Code START -->
 <a href="http://www.hitwebcounter.com/" target="_blank">
