--- a/index.html
+++ b/index.html
@@ -14,15 +14,7 @@
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- sides -->
-<ins class="adsbygoogle"
-     style="float:right; display:inline-block;width:300px;height:600px"
-     data-ad-client="ca-pub-1945780898390297"
-     data-ad-slot="1295625967"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
   <div class="container">
     <div class="heading">
       <h1 class="title">Finals 2048&nbsp;</h1>
@@ -134,6 +126,8 @@
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
-<!-- Top of site --> <ins class="adsbygoogle"      style="display:inline-block;width:1000px;height:120px"      data-ad-client="ca-pub-1945780898390297"      data-ad-slot="5709465966"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+<div align="center"><!-- Top of site --> <ins class="adsbygoogle"      style="display:inline-block;width:782px;height:120px"      data-ad-client="ca-pub-1945780898390297"      data-ad-slot="5709465966"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+</div>
+	
 </body>
 </html>
