--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
-
   <div class="container">
     <div class="heading">
       <h1 class="title">Finals 2048&nbsp;</h1>
@@ -37,7 +36,7 @@
       <div class="game-message">
         <p></p>
         <div class="lower">
-	        <a class="keep-playing-button">I love yellow tiles</a>
+<a class="keep-playing-button">I love yellow tiles</a>
           <a class="retry-button">I'll study next year</a>
         </div>
       </div>
@@ -98,10 +97,20 @@
 
 </p>
     <hr>
-
+      <script type="text/javascript"><!--
+google_ad_client = "ca-pub-1945780898390297";
+/* finals */
+google_ad_slot = "5884262763";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 <!-- hitwebcounter Code START -->
 <a href="http://www.hitwebcounter.com/" target="_blank">
-<img src="http://hitwebcounter.com/counter/counter.php?page=5304515&style=0007&nbdigits=15&type=page&initCount=0" title="number counter" Alt="number counter"   border="0" >
+<img src="http://hitwebcounter.com/counter/counter.php?page=5304515&style=0007&nbdigits=15&type=page&initCount=0" title="number counter" Alt="number counter" border="0" >
 </a>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -114,7 +123,6 @@
 
 </script>
     </p>
-
   </div>
 
   <script src="js/animframe_polyfill.js"></script>
@@ -125,9 +133,6 @@
   <script src="js/local_score_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
-<div align="center"><!-- Top of site --> <ins class="adsbygoogle"      style="display:inline-block;width:782px;height:120px"      data-ad-client="ca-pub-1945780898390297"      data-ad-slot="5709465966"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
-</div>
-	
+
 </body>
 </html>
