--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ google_ad_height = 90;
 <script type="text/javascript"
 src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 </script></div>
-<div style="float:right; position:absolute;">
+<div align="right">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- sides -->
 <ins class="adsbygoogle"
