--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- sides -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:600px"
+     style="position:absolute; display:inline-block;width:300px;height:600px"
      data-ad-client="ca-pub-1945780898390297"
      data-ad-slot="1295625967"></ins>
 <script>
