--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 
-<body style="width:500px;">
+<body style="width:500px; margin:0 auto;">
 <div align="right">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- sides -->
