--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<div align="left">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- sides -->
+<ins class="adsbygoogle"
+     style="position:absolute; display:inline-block;width:20%;height:600px"
+     data-ad-client="ca-pub-1945780898390297"
+     data-ad-slot="1295625967"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
   <div class="container">
     <div class="heading">
       <h1 class="title">Finals 2048&nbsp;</h1>
