--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- sides -->
 <ins class="adsbygoogle"
-     style="position:absolute; display:inline-block;width:20%;height:600px"
+     style="position:absolute; display:inline-block;width:200px;height:600px"
      data-ad-client="ca-pub-1945780898390297"
      data-ad-slot="1295625967"></ins>
 <script>
@@ -30,7 +30,7 @@
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- sides -->
 <ins class="adsbygoogle"
-     style="position:absolute; display:inline-block;width:20%;height:600px"
+     style="position:absolute; display:inline-block;width:200px;height:600px"
      data-ad-client="ca-pub-1945780898390297"
      data-ad-slot="1295625967"></ins>
 <script>
