add new ad on top of page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- finals2048top -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1945780898390297"
+     data-ad-slot="7336844761"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <div class="container">
     <div class="heading">
       <h1 class="title">Finals 2048&nbsp;</h1>
