add new ad on top

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 </head>
 
 <body style="width:500px; margin:0 auto;">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- finals2048top -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1945780898390297"
+     data-ad-slot="7336844761"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <div align="right">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- sides -->
