add new ad on top of page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Finals 2048</title>
+  <title>Game #12</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -26,7 +26,8 @@
 </script>
   <div class="container">
     <div class="heading">
-      <h1 class="title">Finals 2048&nbsp;</h1>
+      <h1 class="title">Game #12&nbsp;</h1>
+      <h2 class="title">2-16&nbsp;</h2>
 
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://gagikm.github.io/Finals2048" data-via="gagikm">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
@@ -40,7 +41,7 @@
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+    <p class="game-intro">Join the numbers and get to the <strong>tile!</strong></p>
 
     <div class="game-container">
       <div class="game-message">
@@ -84,17 +85,17 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to get to 2048 then get back to studying.</strong>
+      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to get 16s then get back to studying.</strong>
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This is not the official 2048 game but you are still a winner. </a>
+    <strong class="important">Note:</strong> The game on this site is the real version of 2048's twelfth game but you are still a winner. </a>
     </p>
     <hr>
     <p>
-    Original version created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Original version created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Created by <a href="thereal2048.github.io/">TheReal2048.</a>
     <br>
-    Finals version created by <a href="https://twitter.com/gagikm">Gagik </a><a href="http://www.linkedin.com/pub/gagik-movsisyan/63/4b6/53b"target="_blank">Movsisyan.</a> <a href="https://twitter.com/gagikm" class="twitter-follow-button" data-show-count="false">Follow @gagikm</a>
+    Original 2048 Finals created by <a href="https://twitter.com/gagikm">Gagik </a><a href="http://www.linkedin.com/pub/gagik-movsisyan/63/4b6/53b"target="_blank">Movsisyan.</a> <a href="https://twitter.com/gagikm" class="twitter-follow-button" data-show-count="false">Follow @gagikm</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 <p><center><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
